# english_dictionary

./: .pre-commit-config.yaml
backend/: pyproject.toml  pytest.ini
backend/accounts/migrations/: 0001_initial.py
backend/dictionary/: admin.py  models.py  serializers.py  urls.py  views.py
backend/dictionary/migrations/: 0001_initial.py
backend/english_dictionary/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package.json
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/views/: DeckLIstView.vue
